tests/common/snapshots/arj__common__tests__arj.rs-16-5_file_map.snap
---
source: tests/common/mod.rs
assertion_line: 68
expression: results.file_map
---
- offset: 13
  id: "[uuid]"
  size: 59
  name: arj
  confidence: 250
  description: "ARJ archive data, header size: 59, version 11, minimum version to extract: 1, flags: no password|slash-switched, compression method: stored, file type: comment header, original name: arj.archive.arj, original file date: 2025-04-30 15:32:03, compressed file size: 1746027123, uncompressed file size: 0, os: UNIX"
  always_display: false
  extraction_declined: false
- offset: 74
  id: "[uuid]"
  size: 66
  name: arj
  confidence: 250
  description: "ARJ archive data, header size: 66, version 11, minimum version to extract: 1, flags: no password|slash-switched, compression method: compressed most, file type: binary, original name: readme.txt, original file date: 2025-04-30 15:32:03, compressed file size: 89277, uncompressed file size: 339209, os: UNIX"
  always_display: false
  extraction_declined: true
- offset: 89423
  id: "[uuid]"
  size: 59
  name: arj
  confidence: 250
  description: "ARJ archive data, header size: 59, version 11, minimum version to extract: 1, flags: no password|slash-switched, compression method: stored, file type: comment header, original name: arj.archive.arj, original file date: 2025-04-30 15:32:03, compressed file size: 1746027123, uncompressed file size: 0, os: UNIX"
  always_display: false
  extraction_declined: false
- offset: 89484
  id: "[uuid]"
  size: 66
  name: arj
  confidence: 250
  description: "ARJ archive data, header size: 66, version 11, minimum version to extract: 1, flags: no password|slash-switched, compression method: compressed most, file type: binary, original name: readme.txt, original file date: 2025-04-30 15:32:03, compressed file size: 89277, uncompressed file size: 339209, os: UNIX"
  always_display: false
  extraction_declined: true
