tests/common/snapshots/arj__common__tests__arj.rs-16-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: ~
  success: true
  extractor: 7z
  do_not_recurse: false
  output_directory: "[output_directory]"
- ~
- size: ~
  success: true
  extractor: 7z
  do_not_recurse: false
  output_directory: "[output_directory]"
- ~
